tests/suite/snapshots/all__suite__wildcard_import_test__dependency_graph.snap
---
source: tests/suite/wildcard_import_test.rs
expression: "normalize_output(&run(&dest, &[\"build\", \"dependencies\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
  - WidgetA.java (widgets/WidgetA.java)
  - WidgetA.java (widgets/WidgetA.java)
  - WidgetA.java (widgets/WidgetA.java)
  - WidgetB.java (widgets/WidgetB.java)
  - WidgetB.java (widgets/WidgetB.java)
  - WidgetB.java (widgets/WidgetB.java)
  - WidgetC.java (widgets/WidgetC.java)
  - WidgetC.java (widgets/WidgetC.java)
  - WidgetC.java (widgets/WidgetC.java)
Dependency graph
Main.java (app/Main.java)
Syncing dependencies
WidgetA.java (widgets/WidgetA.java)
WidgetB.java (widgets/WidgetB.java)
WidgetC.java (widgets/WidgetC.java)
