tests/suite/snapshots/all__suite__wildcard_import_test__full_build_output.snap
---
source: tests/suite/wildcard_import_test.rs
expression: "normalize_output(&run(&dest, &[\"build\", \"--show-compiled\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
  <ROOT>/src/app/Main.java
  <ROOT>/src/widgets/WidgetA.java
  <ROOT>/src/widgets/WidgetB.java
  <ROOT>/src/widgets/WidgetC.java
Compiled in <TIME>s
Compiling using full build (4 files)
Creating annotation library directory: <ROOT>/target/lib-annotations
Creating build directory: <ROOT>/target/bin
Creating build processor directory: <ROOT>/target/processor-bin
Creating generated src directory: <ROOT>/target/generated-source
Creating library directory: <ROOT>/target/lib
Syncing dependencies
