tests/suite/snapshots/all__suite__wildcard_import_test__incremental_build_after_widget_b_edit.snap
---
source: tests/suite/wildcard_import_test.rs
expression: "normalize_output(&run(&dest, &[\"build\", \"--show-compiled\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
  <ROOT>/src/app/Main.java
  <ROOT>/src/widgets/WidgetA.java
  <ROOT>/src/widgets/WidgetB.java
  <ROOT>/src/widgets/WidgetC.java
Compiled in <TIME>s
Compiling using incremental build (4 stale files)
Syncing dependencies
