tests/suite/snapshots/all__suite__wildcard_import_test__stale_after_full_build.snap
---
source: tests/suite/wildcard_import_test.rs
expression: "normalize_output(&run(&dest, &[\"build\", \"stale\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
Stale 0 files to recompile
Syncing dependencies
