tests/suite/snapshots/all__suite__wildcard_import_test__stale_after_widget_b_edit.snap
---
source: tests/suite/wildcard_import_test.rs
expression: "normalize_output(&run(&dest, &[\"build\", \"stale\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
  <ROOT>/src/app/Main.java
  <ROOT>/src/widgets/WidgetA.java
  <ROOT>/src/widgets/WidgetB.java
  <ROOT>/src/widgets/WidgetC.java
Stale 4 files to recompile
Syncing dependencies
